# audiostretchy

./: .gitmodules  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  GITHUB_WORKFLOW.md  Makefile  PLAN.md  README.md  SEMVER_GUIDE.md  TODO.md  WORK.md  llms.txt  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
_github/: README.md
_github/workflows/: docs.yml  release.yml
scripts/: build.sh  build_local.py  compile_c.py  release.sh  test.sh
src/audiostretchy/: __init__.py  __main__.py  core.py
src/audiostretchy/c_interface/: __init__.py  build.py  wrapper.py
src_docs/: mkdocs.yml
src_docs/md/: 01-installation.md  02-quick-start.md  03-cli-usage.md  04-python-api.md  05-how-it-works.md  06-core-architecture.md  07-parameters-reference.md  08-contributing.md  09-api-reference.md  index.md
tests/: conftest.py  test_cli.py  test_core.py  test_mono_audio.py  test_performance.py
